--- a/index.html
+++ b/index.html
@@ -4,40 +4,63 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>OMDB-FUN</title>
-  <link rel="stylesheet" href="">
+  <!-- <link rel="stylesheet" href="css/foundation.css" /> -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css" />
+  <script src="js/vendor/modernizr.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="main.js"></script>
+
+      <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-  <h1>OMBD Fun</h1>
+<h1>Search the OMDB Database</h1>
+<!-- INPUT NEW TITLE -->
+  <div class="container">
+    <div class="row">
+      <form id="formSearch" class="form-search">
+          <div class="col-md-3">&nbsp;</div>
+          <div class="col-md-4">
+            <input type="text" class="form-control" id="titleContains" placeholder="Title contains:">
+          </div>
+          <div class="col-md-2">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
+          </div>
+          <div class="col-md-3">&nbsp;</div>
+      </form>
+    </div>
 
-  <div>
-    <form id="form1" method="post">
-      <label>Title contains:<input type="text" id="titleContains"></label>
-      <input type="submit">
-    </form>
+<!-- SHOW TITLES IN COLUMNS -->
+
+
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Title</h3>
+      </div>
+      <div class="col-md-2">
+        <h3>Year</h3>
+      </div>
+      <div class="col-md-2">
+        <h3>Type</h3>
+      </div>
+      <div class="col-md-2">
+        <h3>imdbID</h3>
+      </div>
+    </div>  
+    <div class="movieAll">
+
+    </div>
   </div>
 
-  <div>
-    <table>
-      <thead>
-        <th>Title</th>
-        <th>Type</th>
-        <th>Year</th>
-        <th>imdbID</th>
-      </thead>
-      <tbody class="movieAll">
-
-      </tbody>
-    </table>
-  </div>
-<!--   <div>
-    <h1>Movies</h1>
-    <p class="showMovies"></p>
-    <ul id="movies">
-
-    </ul>
-  </div>
-  <div id="detail">Detail</div> -->
+  <!--
+      <!- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
