--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <main>
-    <h1>Search the OMDB Database</h1>
+    <h1>The OMDb API</h1>
 
     <div class="container">
       <div class="row">
@@ -35,7 +35,7 @@
         </form>
       </div>
 
-      <div class="row">
+      <div class="row" id="list-head">
         <div class="col-md-6">
           <h3>Title</h3>
         </div>
@@ -54,16 +54,75 @@
         <!-- List of Movies goes here -->
       </div>
 
-      <div class="row">
+
+      <div class="row" id="details-head">
         <div class="col-md-8">
+
+          <div class="row">
+            <div class="col-md-4">
+              <h3>Director</h3>
+                <p class="movie-director">
+                  <!-- Movie Director goes here -->
+                </p>    
+            </div>
+            <div class="col-md-8">
+              <h3>Actors</h3>
+                <p class="movie-actors">
+                  <!-- Movie Actors goes here -->
+                </p>    
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-3">
+              <h3>Genre</h3>
+                <p class="movie-genre">
+                  <!-- Movie Genre goes here -->
+                </p>    
+            </div>
+            <div class="col-md-3">
+              <h3>Runtime</h3>
+                <p class="movie-runtime">
+                  <!-- Movie Runtime goes here -->
+                </p>    
+            </div>
+            <div class="col-md-3">
+              <h3>Country</h3>
+                <p class="movie-country">
+                  <!-- Movie Country goes here -->
+                </p>    
+            </div>
+            <div class="col-md-3">
+              <h3>Languages</h3>
+                <p class="movie-languages">
+                  <!-- Movie Languages goes here -->
+                </p>    
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <h3>IMDB Rating</h3>
+                <p class="movie-imdbrating">
+                  <!-- Movie imdbRating goes here -->
+                </p>    
+            </div>
+            <div class="col-md-8">
+              <h3>Awards</h3>
+                <p class="movie-awards">
+                  <!-- Movie Awards goes here -->
+                </p>    
+            </div>
+          </div>
+
           <h3>Plot</h3>
-          <p class="moviePlot">
+          <p class="movie-plot">
             <!-- Movie Plot goes here -->
           </p>
         </div>
         <div class="col-md-4">
-          <h3>Poster</h3>
-          <div class="moviePoster">
+          <h3 class="sr-only">Poster</h3>
+          <div class="movie-poster">
             <!-- Movie Poster goes here -->
           </div>
         </div>
